Fix text alignment issue with prev navigation item

--- a/components/navigation.module.scss
+++ b/components/navigation.module.scss
@@ -50,6 +50,7 @@
 
     &.prev {
       float: right;
+      text-align: right;
 
       .arrow {
         float: right;
